百度商桥改为客服QQ

--- a/web/WEB-INF/templates/default/decorators/include/header.jspf
+++ b/web/WEB-INF/templates/default/decorators/include/header.jspf
@@ -98,9 +98,8 @@
 	         <div id="BDBridgeFixedWrap" ></div>
           --%>
           <!-- WPA Button Begin -->
-          <!-- 
-<script charset="utf-8" type="text/javascript" src="http://wpa.b.qq.com/cgi/wpa.php?key=XzkzODAxODYxMl8yMDgwNTlfNDAwNjYxNTY3N18"></script> -->
-<a target="_blank" href ="http://webim.qiao.baidu.com//im/index?siteid=4706350&ucid=7282853"><img src="${resPath}/images/baidushangqiao.png"/></a>
+<a target="_blank" href="http://sighttp.qq.com/authd?IDKEY=3643eac2b6614f2095191848222279f192d6d2252e5eaa52"><img border="0"  src="http://wpa.qq.com/imgd?IDKEY=3643eac2b6614f2095191848222279f192d6d2252e5eaa52&pic=51" alt="欢迎咨询" title="欢迎咨询"/></a>
+<!-- <a target="_blank" href ="http://webim.qiao.baidu.com//im/index?siteid=4706350&ucid=7282853"><img src="${resPath}/images/baidushangqiao.png"/></a> -->
 <!-- WPA Button End -->
           
           </div>
